--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ trigger:
 variables:
   buildConfiguration: 'Release'
 
--stages:
+stages:
 - stage: 'Build'
   displayName: 'Build the web application'
   jobs: 
@@ -89,7 +89,7 @@ variables:
               appType: webAppLinux
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/Tailspin.SpaceGame.Web.zip'
 
-              - task: AzureFunctionApp@1
+          - task: AzureFunctionApp@1
             displayName: 'Azure Function Deploy: leaderboard'
             inputs:
               azureSubscription: 'Resource Manager - Tailspin - Space Game'
@@ -99,7 +99,7 @@ variables:
               runtimeStack: DOCKER|microsoft/azure-functions-dotnet-core3.0:3.0
               startUpCommand: 'func azure functionapp publish $(functionAppName) --no-bundler'
 
-              - task: AzureAppServiceSettings@1
+- task: AzureAppServiceSettings@1
   displayName: 'Update web app settings'
   inputs:
     azureSubscription: 'Resource Manager - Tailspin - Space Game'
